--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0"
   },
@@ -25,4 +27,3 @@
   },
   "private": true
 }
-
